--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     }
 </style>
 </head>
-<h1>This is really what happiness looks like - version 2</h1>
+<h1>This is what happiness looks like - version 2</h1>
 <script language = "javascript">
         var imgArray = new Array();
         var bucket = "https://ecs-demogo-pictures.s3.ap-northeast-2.amazonaws.com/dog/"
